# hackathon_make_and_play_2026

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
apl/: .env.example  Procfile
apl/apl/: settings.py  urls.py
apl/app/: serializers.py  urls.py  views.py
apl/app/services/: __init__.py  directions.py  emotion_routing.py  gemini.py  geocoder.py  places.py  safety.py
apl/docs/: emotion_routing.md  overview.md  requirements.md  roadmap.md  spot_selection
app/: globals.css  layout.tsx  page.module.css  page.tsx
app/components/: EmotionInput.module.css  EmotionInput.tsx  LoadingScreen.tsx  MapNav.module.css  MapNav.tsx  ResultScreen.tsx
app/lib/: types.ts
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/backend/[...path]/: route.ts
frontend/app/components/: EmotionInput.tsx  MapNav.module.css  MapNav.tsx  ResultScreen.tsx  ResultScreenV2.module.css  ResultScreenV2.tsx  RouteMapSVG.tsx
frontend/app/lib/: api.ts  geo.ts
frontend/scripts/: next-with-env.mjs
